@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-29T16:12:37Z",
+  "timestamp" : "2023-07-30T08:12:52Z",
   "count_outdated" : 151,
   "uniques_outdated" : 126,
-  "count" : 159,
-  "uniques" : 133,
+  "count" : 160,
+  "uniques" : 134,
   "clones" : [
     {
       "timestamp": "2023-07-17T00:00:00Z",
@@ -52,6 +52,15 @@
     },
     {
       "timestamp": "2023-07-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-30T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
